# Algebraic-Causality-Theory-ACT-A-Systematic-Review

./: README.md
src/: CMakeLists.txt  act_core.hpp  main.cpp  physics.hpp  simulation.hpp
